force-app/main/default/objects/Candidate__c/fields/Applied_Job__c.field-meta.xml
<CustomField>
    <fullName>Applied_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Job</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>