force-app/main/default/objects/Candidate__c/fields/skills__c.field-meta.xml
<CustomField>
    <fullName>skills__c</fullName>
    <label>skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>