force-app/main/default/objects/Candidate__c/validationRules/Email_Required_For_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required_For_Review</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;In Review&quot;),
  ISBLANK(email__c)
)</errorConditionFormula>
    <errorDisplayField>email__c</errorDisplayField>
    <errorMessage>Email is required when candidate is In Review</errorMessage>
</ValidationRule>