force-app/main/default/objects/Candidate__c/validationRules/Skills_Required_On_Apply.validationRule-meta.xml
<ValidationRule>
    <fullName>Skills_Required_On_Apply</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Applied&quot;),
  ISBLANK(skills__c)
)</errorConditionFormula>
    <errorDisplayField>skills__c</errorDisplayField>
    <errorMessage>Skills cannot be blank when applying</errorMessage>
</ValidationRule>